# go-vs-fastapi-bench

./: .env.example  .env.multi  .env.single  .gitignore  Makefile  README.md  docker-compose.single.yml  docker-compose.yml
db/migrations/: 001_init.sql
db/seed/: 001_seed_users.sql
go-api/: Dockerfile  go.mod
go-api/cmd/server/: main.go
go-api/internal/config/: config.go
go-api/internal/db/: pool.go  repository.go
go-api/internal/http/: handler.go
go-api/internal/model/: models.go
loadtest/k6/: list_users.js  mixed.js  ramp.js  read_user.js  steady.js
loadtest/results/: .gitkeep
py-api/: Dockerfile  pyproject.toml
py-api/app/: __init__.py  api.py  config.py  db.py  main.py  schemas.py
scripts/: run_k6.sh  wait_for.sh
tasks/: task1.md
