[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bench-py-api"
version = "0.1.0"
description = "Python FastAPI benchmark service"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
